--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 title: Hyperspace
 email: youremailaddress@gmail.com
 description: The Jekyll version of the Hyperspace theme by HTML5 UP.
-baseurl: "/hyperspace-jekyll-theme" # the subpath of your site, e.g. /blog
-url: "https://andrewbanchich.gitlab.io" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://janus-analytica.github.io" # the base hostname & protocol for your site
 
 # Social settings
 500px_url: 
