--- a/_config.yml
+++ b/_config.yml
@@ -6,30 +6,30 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Hyperspace
-email: youremailaddress@gmail.com
+title: Janus Analytica
+email: 
 description: The Jekyll version of the Hyperspace theme by HTML5 UP.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://janus-analytica.github.io" # the base hostname & protocol for your site
 
 # Social settings
 500px_url: 
-facebook_url: https://facebook.com
-github_url: 
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
-instagram_url: https://instagram.com
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+facebook_url: 
+github_url: https://github.com/janus-analytica 
+gitlab_url: 
+googleplus_url: 
+instagram_url: 
+linkedin_url: 
 pinterest_url: 
 slack_url: 
-twitter_url: https://twitter.com/andrewbanchich
+twitter_url: https://twitter.com/janusanalytica
 
 # Build settings
 markdown: kramdown
 
 # Plugin: jekyll-seo-tag
 twitter:
-  username: andrewbanchich
+  username: janusanalytica
 # Add one or more of the following
 facebook:
   app_id: 
